# rsocket-rust-demo

./: Cargo.toml  README.md  index.http  justfile
examples/: client.rs  server.rs
src/: client.rs  server.rs
tests/: rsocket_tests.rs
