[package]
name = "rsocket-rust-demo"
version = "0.1.0"
authors = ["linux_china <libing.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
once_cell = "1.5.2"
tokio = { version = "1", features = ["full"] }
rsocket_rust = "0.7.0"
rsocket_rust_transport_tcp = "0.7.0"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
anyhow = "1.0"
async-trait ="0.1"
